# class-grading

./: .gitignore  docker-compose.yml
backend/: alembic.ini  dockerfile  pyproject.toml
backend/alembic/versions/: 5919eabf6c7a_initialize_database.py
backend/api/: __init__.py
backend/app/: main.py  models.py  orm.py  router_dependicies.py
backend/app/api/: __init__.py  courses.py  results.py  students.py
db/: pyproject.toml
db/alembic/versions/: 5919eabf6c7a_initialize_database.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  api.js
frontend/src/components/common/: navBar.jsx  newCourse.jsx  newCourseResults.jsx  newStudent.jsx
frontend/src/pages/: courseResults.jsx  courses.jsx  home.jsx  students.jsx
