[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["Thomas Shih <55861476+ThomasShih@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.22"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.28.0"
email-validator = "^2.1.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
