[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["Thomas Shih <55861476+ThomasShih@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.22"

[tool.poetry.dev-dependencies]
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
